TODO
* fix for volume size - 4096 ?
* fix fuse status print
* the volume header is stored unencrypted (partially encrypted?) on disk also the BDE metadata
  - make sure to handle them correctly (partial)
* AES
  - add support for MS Crypto API implementation - add GetError
  - WinXP no AES support ?
* add password support (partial)
* add clear key support
* add start up key support
* debug print more volume header info

Optimizations
* combine difusers in a single function
  or pass values 32bit

Library
* add external (start up) key support
* "clear key" - unprotected VMK - support
* use metadata volume size instead of end offset check ?

Release:
* check debug output aligment
* automated tests
* manuals
  - bdemount
* msvscpp build
* check TODOs

Tools:
* bdeinfo
* bdeexport

Format:
* validation
* clear key
* TPM encoded VMK ?
* VMK date time - change password on USB encrypted drive
* what is entry type 0x000b ?

Test images:
* for Windows Vista, Windows 7, To Go
* clear key
* start up key

Validate test cases:
* AES 128
* AES 128 diffuser
* AES 256
* AES 256 diffuser
* recovery key
* external key

20110823
* updated libbfio, libfvalue

20110822
* remove seek end volume size detection to rely on metadata
* small changes to configure for fuse

20110821
* worked on handling metadata blocks
  - fix for BitLocker To Go
* fix for openssl EVP
* updated libhmac
* code clean up
* added codepage
* bdemount now daemonizes
* improved libfuse detection by configure
* worked on manuals
* open now distinguishes between failure and invalid keys
* the library no longer stores the binary recovery key but its SHA256 hash
* worked on password support
* updated msvscpp build files
* worked on WINAPI build

20110819
* worked on handling metadata blocks

20110818
* updated libbfio
* code clean up
* added msvscpp build files
* worked on WINAPI build

20110817
* worked on fuse mount

20110816
* updated libbfio
* worked on fuse mount

20110812
* worked on fuse mount

20110811