@@ -69,7 +69,7 @@ enum LIBBDE_VERSIONS
 {
 	LIBBDE_VERSION_WINDOWS_VISTA			= 6,
 	LIBBDE_VERSION_WINDOWS_7			= 7,
-	LIBBDE_VERSION_TOGO				= (int) 'T'
+	LIBBDE_VERSION_TO_GO				= (int) 'T'
 };
 
 /* The encryption methods
@@ -126,8 +126,10 @@ enum LIBBDE_VALUE_TYPES
  */
 enum LIBBDE_VMK_TYPES
 {
+	LIBBDE_VMK_TYPE_TPM_PROTECTED			= 0x01000000UL,
+
 	LIBBDE_VMK_TYPE_RECOVERY_KEY_PROTECTED		= 0x08000000UL,
-	LIBBDE_VMK_TYPE_TPM_PROTECTED			= 0x10000000UL,
+
 	LIBBDE_VMK_TYPE_EXTERNAL_KEY_PROTECTED		= 0x20000000UL
 };
 
