@@ -1,6 +1,4 @@
 TODO
-* fix for volume size - 4096 ?
-* fix fuse status print
 * the volume header is stored unencrypted (partially encrypted?) on disk also the BDE metadata
   - make sure to handle them correctly (partial)
 * AES
@@ -38,6 +36,7 @@ Format:
 * TPM encoded VMK ?
 * VMK date time - change password on USB encrypted drive
 * what is entry type 0x000b ?
+* why does windows hide the last 4096 bytes of the volume?
 
 Test images:
 * for Windows Vista, Windows 7, To Go
@@ -51,6 +50,9 @@ Validate test cases:
 * AES 256 diffuser
 * recovery key
 * external key
+
+20110824
+* worked on Vista support
 
 20110823
 * updated libbfio, libfvalue
